# deq

./: DRAEquiv.cabal  README.md  dra.dtd  stack.yaml  toUnix
app/: Main.hs
benchmarking/: README
benchmarking/lois/stacks/: st1  st10  st13  st2  st4  st8  ts13  ts14  ts4  ts6  ts7
benchmarking/nlambda/: nlambda.cabal
benchmarking/ralib-eqcheck/stacks/: lrralib-10.xml  lrralib-11.xml  lrralib-13.xml  lrralib-16.xml  lrralib-17.xml  lrralib-20.xml  lrralib-3.xml  lrralib-4.xml  lrralib-5.xml  lrralib-6.xml  lrralib-7.xml  lrralib-8.xml  rlralib-12.xml  rlralib-14.xml  rlralib-15.xml  rlralib-16.xml  rlralib-2.xml  rlralib-20.xml  rlralib-4.xml  rlralib-7.xml
cav19/: README
cav19/lois/: Makefile
cav19/lois/stacks/: st11  st12  st14  st15  st3  st6  st7  ts1  ts10  ts12  ts3  ts9
cav19/nlambda/: stack.yaml
cav19/ralib-eqcheck/stacks/: lrralib-12.xml  lrralib-14.xml  lrralib-15.xml  lrralib-18.xml  lrralib-19.xml  lrralib-2.xml  lrralib-9.xml  rlralib-1.xml  rlralib-10.xml  rlralib-11.xml  rlralib-13.xml  rlralib-17.xml  rlralib-18.xml  rlralib-19.xml  rlralib-3.xml  rlralib-5.xml  rlralib-6.xml  (+2 more)
examples/: cpt-3.xml  cptR-3.xml  gloloG-3.xml  gloloL-3.xml  lrstack-3.xml  lrstack-alt-3.xml  rlstack-3.xml  rlstack-alt-3.xml
experiments/: Makefile  README
experiments/nlambda/: nlambda.cabal
experiments/ralib-eqcheck/: ralibeq-conc.sh  ralibeq-sym.sh
generator/: Main.hs  cptGen.py  cptRGen.py
global/: Main.hs
one/: Main.hs
runner/: Main.hs
src/: Automata.hs  Bisim.hs  GenSystem.hs  Main.hs  PPerm.hs
stacks/: Main.hs  Stack.hs
test/: Spec.hs
(+14 files in other folders)
