name:                DRAEquiv
version:             1.1
-- synopsis:
-- description:
homepage:            https://github.com/stersay/deq
license:             BSD3
author:              Steven Ramsay
maintainer:          steven.ramsay@bristol.ac.uk
copyright:           2019 Steven Ramsay
category:            Register Automata
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable deq
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Automata, Bisim, GenSystem, PPerm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , text
                     , mtl
                     , bimap
                     , cmdargs
                     , xml-conduit
                     , HaskellForMaths
  default-language:    Haskell2010

executable gen
  hs-source-dirs:      generator
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hxt
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stersay/deq
